archieves/batch-59/Installation_python.txt
Ubuntu/linuxmint/zorion
-------------------------
# sudo apt-get install python (2.x)
# sudo apt-get install python3 (3.x)
# sudo apt-get install ipython
# sudo apt-get install ipython3
# sudo apt-get install bpython
# sudo apt-get install bpython3

Centos/Redhat/fedora
----------------------
# yum install python (2.x)
# yum install python3 (3.x)
# yum install ipython
# yum install ipython3
# yum install bpython
# yum install bpython3

windows
---------
https://www.continuum.io/downloads

IDE
----
http://stackoverflow.com/questions/81584/what-ide-to-use-for-python





tcloudost@tcloudost-VirtualBox ~ $ python
Python 2.7.6 (default, Jun 22 2015, 17:58:13) 
[GCC 4.8.2] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> 
>>> print "hello world"
hello world
>>> quit()
tcloudost@tcloudost-VirtualBox ~ $ python3
Python 3.4.3 (default, Oct 14 2015, 20:28:29) 
[GCC 4.8.4] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> print ("hello world")
hello world
>>> 
>>> quit()
tcloudost@tcloudost-VirtualBox ~ $ 

tcloudost@tcloudost-VirtualBox ~ $ ipython
Python 2.7.6 (default, Jun 22 2015, 17:58:13) 
Type "copyright", "credits" or "license" for more information.

IPython 5.1.0 -- An enhanced Interactive Python.
?         -> Introduction and overview of IPython's features.
%quickref -> Quick reference.
help      -> Python's own help system.
object?   -> Details about 'object', use 'object??' for extra details.

In [1]: print "hello world"
hello world

In [2]: 

tcloudost@tcloudost-VirtualBox ~ $ bpython
>>> print "hello world"
hello world
>>> quit()

tcloudost@tcloudost-VirtualBox ~ $ cd Documents/
tcloudost@tcloudost-VirtualBox ~/Documents $ ls
git_repositories
tcloudost@tcloudost-VirtualBox ~/Documents $ cd git_repositories/
tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories $ ls
python-batches  sv.python-batches
tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories $ cd python-batches/tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-batches $ ls
batch-56  batch-57  batch-58  batch-59  LICENSE  README.md  test
tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-batches $ cd batch-59
tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-batches/batch-59 $ ls
first.py  Installation_python.txt  Opensource.txt
tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-batches/batch-59 $ python first.py
hello world
tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-batches/batch-59 $ perl first.py
hello worldtcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-ba-59 $ batch-
tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-batches/batch-59 $ ls
first.py  Installation_python.txt  Opensource.txt
tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-batches/batch-59 $ chmod +x first.py
tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-batches/batch-59 $ ./first.py
Warning: unknown mime-type for "hello world" -- using "application/octet-stream"
Error: no such file "hello world"
tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-batches/batch-59 $ 

tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-batches/batch-59 $ python -V
Python 2.7.6
tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-batches/batch-59 $ python3 -V
Python 3.4.3
tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-batches/batch-59 $ which python
/usr/bin/python
tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-batches/batch-59 $ ./first.py 
hello world !!!
tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-batches/batch-59 $ 

tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-batches/batch-59 $ ./first.py 
hello world !!!
tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-batches/batch-59 $ ./first.py 
  File "./first.py", line 5
    print "hello world !!!"
                          ^
SyntaxError: Missing parentheses in call to 'print'
tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-batches/batch-59 $ ./first.py 
hello world !!!
tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-batches/batch-59 $ ./first.py 
hello world !!!
tcloudost@tcloudost-VirtualBox ~/Documents/git_repositories/python-batches/batch-59 $ 



